# c-plus-plus-task-4

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
data/: declensions.txt  input_words.txt  outpur.txt
include/: DeclensionDatabase.h  FileProcessor.h  Logger.h  MainWindow.h
src/: DeclensionDatabase.cpp  FileProcessor.cpp  Logger.cpp  MainWindow.cpp
